package Main.Button;

public interface Clickable {

    void handleClick();
    void onHoverEnter();
    void onHoverExit();

}
